--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-456.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 26020, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-274.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇸🇬 新加坡-223.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.67MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-318.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-276.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
   - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-551.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-708.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-456.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-223.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
