--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-4.67MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-318.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-276.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-4.31MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-403.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.31MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.00MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-551.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-708.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-789.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-717.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.00MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-551.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-708.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-789.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-717.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
