--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-17.44MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
   - {name: 🇨🇳 中国-403.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-282.3KB/s(Youtube:不良林), server: 36.134.53.194, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.90MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 塞浦路斯-359.6KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2, server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-955.3KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-3.01MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇺🇸 美国-203.2KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 177fb4f9-f416-45e9-bd1f-4c28307be367, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇸🇬 新加坡-3.35MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.69MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-500.6KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.17MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.67MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-282.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 塞浦路斯-359.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林) 2
-      - 🇯🇵 日本-955.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.69MB/s(Youtube:不良林)
+      - 🇭🇰 香港-500.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.67MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
